/* Verb */ layout <exaggerate#38778>

--- a/wiki/exaggerate.wikitext
+++ b/wiki/exaggerate.wikitext
@@ -2,7 +2,7 @@
 ===Verb===
 '''to exaggerate'''
 #to [[overstate]], to describe more than is [[fact]]
-:'I've told you a [[billion]] times not to exaggerate'
+#: ''I've told you a [[billion]] times not to exaggerate!''
 
 
 ====Translations====
