--- a/wiki/evanescence.wikitext
+++ b/wiki/evanescence.wikitext
@@ -1,5 +1,12 @@
-To dissipate or disappear like vapor.
+==English==
 
-The act or state of vanishing away; disappearance; as, the evanescence of vapor, of a dream, of earthly plants or hopes. --Rambler
+===Noun===
+'''evanescence'''
 
-The event of fading and gradually vanishing from sight; "the evanescence of the morning mist".
+#The act or state of vanishing away; disappearance;
+#: ''the evanescence of vapor, of a dream, of earthly plants or hopes.'' --Rambler
+#The event of fading and gradually vanishing from sight;
+#: ''the evanescence of the morning mist.''
+
+===Verb===
+#To dissipate or disappear like vapor.
