noun --> proper noun <Count Dracula#53052>

--- a/wiki/Count_Dracula.wikitext
+++ b/wiki/Count_Dracula.wikitext
@@ -1,5 +1,5 @@
 ==English==
-===Noun===
+===Proper Noun===
 '''Count Dracula'''
 
 #The [[fictional]] [[vampire]] in the novel ''[[w:Dracula|Dracula]]'' by [[w:Bram Stoker|Bram Stoker]].
