/* Translations */ +fr <vampire#48478>

--- a/wiki/vampire.wikitext
+++ b/wiki/vampire.wikitext
@@ -8,6 +8,7 @@
 *{{da}}: [[vampyr]] (1)
 *{{et}}: [[vampiir]] (''mythological creature''), [[vereimeja]] (''parasitical person''; a bat'') 
 *{{fi}}: [[vampyyri]], [[verenimijä]]
+*{{fr}}: vampire ''m''
 *German: [[vampir]]
 *Italian: [[vampiro]]
 *Lithuanian: [[vampyras]] ''m''; [[vampyrė]] ''f''
