--- a/wiki/write.wikitext
+++ b/wiki/write.wikitext
@@ -106,6 +106,7 @@ The translations below need to be checked by native speakers and inserted into t
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*{{fr}}: [[écrire]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -120,6 +121,7 @@ The translations below need to be checked by native speakers and inserted into t
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*{{fr}}: [[écrire]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
