--- a/wiki/sunflower.wikitext
+++ b/wiki/sunflower.wikitext
@@ -5,3 +5,11 @@
 '''sunflower'''
 
 #Any plant of the genus Helianthus; -- so called probably from the form and color of its flower, which is large disk with yellow rays. The commonly cultivated sunflower is Helianthus annuus, a native of America.
+
+==== Translation ====
+
+* {{fr}}: [[tournesol]]
+* {{gu}}: [[સુર્યમુખી]] (suryamukhî)
+* {{hi}}: [[सुर्यमुखी]] (suryamukhî)
+
+[[fr:sunflower]]
