--- a/wiki/sunflower.wikitext
+++ b/wiki/sunflower.wikitext
@@ -9,7 +9,7 @@
 ==== Translation ====
 
 * {{fr}}: [[tournesol]]
-* {{gu}}: [[સુર્યમુખી]] (suryamukhî)
-* {{hi}}: [[सुर्यमुखी]] (suryamukhî)
+* {{gu}}: [[સુર્યમુખી]] (''suryamukhî'')
+* {{hi}}: [[सुर्यमुखी]] (''suryamukhî'')
 
 [[fr:sunflower]]
