/* Intransitive verb */ <waver#42708>

--- a/wiki/waver.wikitext
+++ b/wiki/waver.wikitext
@@ -1,3 +1,5 @@
 == Intransitive verb ==
 
-<!--copyvio blanked-->
+*[[to move back and forth/insubstantial]]
+
+*[[The palm tree wavered and dissapeared. It was only a mirage!]]
