--- a/wiki/waver.wikitext
+++ b/wiki/waver.wikitext
@@ -1,5 +1,6 @@
-== Intransitive verb ==
+==English==
 
-*[[to move back and forth/insubstantial]]
+===Intransitive verb===
 
-*[[The palm tree wavered and dissapeared. It was only a mirage!]]
+#to [[move]] back and forth. (''insubstantial'')
+#: ''The [[palm]] tree wavered and dissapeared. It was only a mirage!''
