--- a/wiki/beryl.wikitext
+++ b/wiki/beryl.wikitext
@@ -1,2 +1,25 @@
-beryl is daryl with a b
-[http://www.yugioh.com link title]
+[[Image:Pfberyl.jpg|thumbnail|Beryl crystal. Photo by Pinkfud]]
+===Pronunciation===
+
+:bur'l
+===Noun===
+
+#Beryl is a [[mineral]] of [[pegmatite]] deposits. It is one of the most beautifully [[crystal]]line of minerals, and forms valuable gemstones. The transparent dark green variety is [[emerald]], pink is [[morganite]], and blue is [[aquamarine]]. Common beryl is an ore of [[beryllium]].
+
+=== Chemical composition ===
+*Beryllium aluminum silicate, <math>Be_3AL_2Si_6O_18</math>
+ 
+=== Physical properties ===
+
+*Moh's Hardness: 8.0
+*Specific gravity: 2.6-2.8
+*Color: White, blue, yellow, green, pink
+*Luster: Glassy, transparent to subtranslucent
+*Fracture: Conchoidal
+*Cleavage: Poor basal
+*Habit: Hexagonal - Dihexagonal bipyramidal
+
+===Related words===
+:''See'' [[Gemstone]], [[Pegmatite]]
+
+[[Category:Mineralogy]]
