--- a/wiki/rigid.wikitext
+++ b/wiki/rigid.wikitext
@@ -4,6 +4,10 @@
 ====Related terms====
 *[[rigidity]]
 
+====Synonims====
+
+*[[unbending]], [[inflexible]]
+
 ====Translations====
 *Chinese: [[刚性]]
 *Dutch: [[stijf]], [[stijve]], [[onbuigzaam]], [[onbuigzame]]
