/* English */  +translation <mineral#64301>

--- a/wiki/mineral.wikitext
+++ b/wiki/mineral.wikitext
@@ -14,7 +14,10 @@
 
 :In general, any rock that is composed of two or more distinct minerals is not itself a mineral.
 
-===Related terms===
+====Translations====
+*{{fr}}: [[minéral]] ''m''
+
+====Related terms====
 *[[mine]]
 *[[mineralogy]]
 [[Category:Mineralogy]]
