--- a/wiki/nickel.wikitext
+++ b/wiki/nickel.wikitext
@@ -20,12 +20,14 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-
+*French: nickel ''m''
+*Greek (Modern): [[νικέλιο]] '' ''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-
+*Italian: [[nichel]], [[nickelio]]
+*Japanese: [[ニッケル]] (nikkeru)
 |}
 |}
 
@@ -34,7 +36,7 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-
+*French: [[pièce]] de [[cinq]] [[cent]]s ''f'' (2)
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -64,7 +66,6 @@
 *[[Estonian]]: [[nikkel]]
 *[[Faroese]]: [[nikkul]]
 *[[Finnish]]: [[nikkeli]] (1)
-*[[French]]: nickel ''m'' (1); [[pièce]] de [[cinq]] [[cent]]s ''f'' (2)
 *[[Frisian]]: [[nikkel]]
 *[[Friulian]]: [[nichel]]
 *[[Galician]]: [[níquel]]
@@ -78,7 +79,6 @@
 *[[Irish]]: [[nicil]]
 *[[Italian]]: [[nichelio]] ''m'' (from Vanderkrogt's site
 *[[Italian]]: [[nichel]] (1); [[moneta]] di [[cinque]] [[centesimi]] ''f'' (2)
-*[[Japanese]]: [[ニッケル]] (nikkeru) (1)
 *[[Kashmiri]]: [[nikel]]
 *[[Kazakh]]: [[никель]]
 *[[Latvian]]: [[niķelis]]
@@ -88,7 +88,6 @@
 *[[Malay]]: [[nikel]]
 *[[Maltese]]: [[nikil]]
 *[[Manx]]: [[nickyl]]
-*[[Modern Greek]]: [[Νικελιο]] '' ''
 *[[Mongolian]]: [[никель]]
 *[[Norwegian]]: [[nikkel]]
 *[[Polish]]:  [[nikiel]] ''m''
@@ -108,6 +107,17 @@
 *[[Uzbek]]: [[никель]]
 *[[Vietnamese]]: [[nikel]]
 *[[Welsh]]: [[nicel]]
+
+----
+==French==
+===Noun===
+'''nickel''' ''m''
+
+# nickel
+
+===Related terms===
+*[[nickelage]]
+*[[nickeler]]
 
 ====External links====
 For etymology and more information refer to:
