layout, fr translation <augury#64375>

--- a/wiki/augury.wikitext
+++ b/wiki/augury.wikitext
@@ -1,3 +1,9 @@
-Augury
+==English==
 
-Meaning: an [[omen]]; a [[prediction]]
+===Noun===
+'''augury'''
+
+# [[omen]], [[prediction]].
+
+====Translations====
+*{{fr}}: [[augure]] ''f''
