--- a/wiki/Kop.wikitext
+++ b/wiki/Kop.wikitext
@@ -1,4 +1,1 @@
-An area in Liverpool fc's main stadium, Anfield. It is very well known of after the stadium was given to Liverpool by Everton.
-
-Meaning
-#dunno what it means really, its just a stand in a stadium.
+Originally named after Spion Kop, a hill in South Africa, that was the scene of a fierce battle in the Boer war. "The Kop" was a large terraced standing area that was the most popular end of the football ground Anfield, home of Liverpool Football Club. It had a claim to be the largest (23,000 standing supporters) and amongst the noisiest of terraces in British football.
