--- a/wiki/Malika.wikitext
+++ b/wiki/Malika.wikitext
@@ -1,3 +1,3 @@
-'''Malika''' is the feminine version of the word [[Malik]] that means "King" in [[Arabic language|Arabic]].  Thus, Malika means [[monarch|Queen]].  This terminology has been adopted into numerous other languages, including [[Persian language|Persian]].
+'''Malika''' is the female version of the word [[Malik]] that means "King" in [[Arabic language|Arabic]].  Thus, Malika means [[monarch|Queen]].  This terminology has been adopted into numerous other languages, including [[Persian language|Persian]], where it is pronounced "Malekeh".
 
 {{msg:stub}}
