--- a/wiki/quantum.wikitext
+++ b/wiki/quantum.wikitext
@@ -5,3 +5,41 @@
 :: '''Examples:'''
 ::* ''Planck's constant is the quantum of angular momentum.''
 ::* ''The photon is the quantum of light.''
+
+==Latin==
+===Adjective===
+('''quantus''', '''quanta''', '''quantum''')
+# how much, how many
+
+====Declension====
+First and second declensions.
+
+{| cellpadding="5" border="1"
+! ''Case \ Gender & N<sup>o</sup>''
+! ''M.''
+! ''F.''
+! ''N.''
+! ''MM.''
+! ''FF.''
+! ''NN.''
+|-
+! ''Nominative''
+| quantus || quanta || quantum
+| quant&#299; || quantae || quanta
+|-
+! ''Genitive''
+| quant&#299; || quantae || quant&#299;
+| quant&#333;rum || quant&#257;rum || quant&#333;rum
+|-
+! ''Dative''
+| quant&#333; || quantae || quant&#333;
+| quant&#299;s || quant&#299;s || quant&#299;s
+|-
+! ''Accusative''
+| quantum || quantam || quantum
+| quant&#333;s || quant&#257;s || quanta
+|-
+! ''Ablative''
+| quant&#333; || quant&#257; || quant&#333;
+| quant&#299;s || quant&#299;s || quant&#299;s
+|}
