/* Declension */ table fmt <quantum#64384>

--- a/wiki/quantum.wikitext
+++ b/wiki/quantum.wikitext
@@ -15,31 +15,31 @@
 First and second declensions.
 
 {| cellpadding="5" border="1"
-! ''Case \ Gender & N<sup>o</sup>''
-! ''M.''
-! ''F.''
-! ''N.''
-! ''MM.''
-! ''FF.''
-! ''NN.''
+!style="background:#47DCF8;"| ''Case \ Gender & N<sup>o</sup>''
+!style="background:#F1BC4E;"| ''M.''
+!style="background:#F1BC4E;"| ''F.''
+!style="background:#F1BC4E;"| ''N.''
+!style="background:#F1BC4E;"| ''MM.''
+!style="background:#F1BC4E;"| ''FF.''
+!style="background:#F1BC4E;"| ''NN.''
 |-
-! ''Nominative''
-| quantus || quanta || quantum
-| quant&#299; || quantae || quanta
+!style="background:#F1BC4E;"| ''Nominative''
+| <big> quantus </big> || <big> quanta </big>|| <big> quantum</big>
+| <big>quant&#299;</big> || <big>quantae</big> || <big>quanta</big>
 |-
-! ''Genitive''
-| quant&#299; || quantae || quant&#299;
-| quant&#333;rum || quant&#257;rum || quant&#333;rum
+!style="background:#F1BC4E;"| ''Genitive''
+| <big>quant&#299;</big> || <big>quantae</big> || <big>quant&#299;</big>
+| <big>quant&#333;rum || <big>quant&#257;rum ||<big>quant&#333;rum</big>
 |-
-! ''Dative''
-| quant&#333; || quantae || quant&#333;
-| quant&#299;s || quant&#299;s || quant&#299;s
+!style="background:#F1BC4E;"| ''Dative''
+| <big>quant&#333; || <big>quantae || <big>quant&#333;
+| <big>quant&#299;s || <big>quant&#299;s || <big>quant&#299;s
 |-
-! ''Accusative''
-| quantum || quantam || quantum
-| quant&#333;s || quant&#257;s || quanta
+!style="background:#F1BC4E;"| ''Accusative''
+| <big>quantum || <big>quantam || <big>quantum
+| <big>quant&#333;s || <big>quant&#257;s || <big>quanta
 |-
-! ''Ablative''
-| quant&#333; || quant&#257; || quant&#333;
-| quant&#299;s || quant&#299;s || quant&#299;s
+!style="background:#F1BC4E;"| ''Ablative''
+| <big>quant&#333; || <big>quant&#257; || <big>quant&#333;
+| <big>quant&#299;s || <big>quant&#299;s || <big>quant&#299;s
 |}
