--- a/wiki/concise.wikitext
+++ b/wiki/concise.wikitext
@@ -1,1 +1,4 @@
-Empty... someone can describe this?
+==English==
+===Adjective===
+'''Concise'''
+# with little to no [[extraneous]] [[detail]]; not [[wordy]]
