--- a/wiki/concise.wikitext
+++ b/wiki/concise.wikitext
@@ -1,4 +1,4 @@
 ==English==
 ===Adjective===
 '''Concise'''
-# with little to no [[extraneous]] [[detail]]; not [[wordy]]
+# with little to no [[extraneous]] [[detail]] or [[word]]s; not [[verbose]]
