--- a/wiki/slack.wikitext
+++ b/wiki/slack.wikitext
@@ -22,3 +22,8 @@
 '''slack'''
 
 #Slackly; as, slack dried hops.
+
+===Verb===
+
+'''slack'''
+# (in the context ''to slack off'') to [[procrastinate]]; to be [[lazy]]
