--- a/wiki/slacker.wikitext
+++ b/wiki/slacker.wikitext
@@ -2,4 +2,4 @@
 ===Noun===
 
 '''slacker'''
-# one who [[procrastinates]] and/or is [[lazy]]; cf. ''to [[slack]] off''
+# one who [[procrastinate]]s and/or is [[lazy]]; cf. ''to [[slack]] off''
