--- a/wiki/explosive.wikitext
+++ b/wiki/explosive.wikitext
@@ -3,4 +3,4 @@
 
 '''Explosive'''
 # with the capability to, or likely to, [[explode]] 
-# ''(slang)'' easily driven to [[anger]]ed, usu. with reference to a [[person]] (''He has an explosive personality.'')
+# ''(slang)'' easily driven to [[anger]], usu. with reference to a [[person]] (''He has an explosive personality.'')
