--- a/wiki/human_being.wikitext
+++ b/wiki/human_being.wikitext
@@ -14,3 +14,4 @@
 *[[Romanica]]: [[esser humano]] ''m''
 *Spanish: [[ser humano]] ''m''
 *Swedish: [[människa]] ''c''
+*Portuguese: [[ser humano]] ''m''
