--- a/wiki/stip.wikitext
+++ b/wiki/stip.wikitext
@@ -1,5 +1,5 @@
 ==Dutch==
-===Noun===
-'''stip'''
+===verb ''intrans.''===
+'''to stip'''
 
-# [[dot]]
+# [[1. to make vain, off-key attempts to sing when one obviously cannot (especially in refernce to the voice part of baritone); 2. to fake popularity in a social environment such as school; 3. to act as being a severe geek, nerd, idiot, etc.]]
