--- a/wiki/stip.wikitext
+++ b/wiki/stip.wikitext
@@ -2,4 +2,5 @@
 ===verb ''intrans.''===
 '''to stip'''
 
-# [[1. to make vain, off-key attempts to sing when one obviously cannot (especially in refernce to the voice part of baritone
+# [[to make vain, off-key attempts to sing when one obviously cannot (especially in refernce to the voice part of baritone
+# [[to fake excessive popularity in a social environment such as school
