--- a/wiki/fox.wikitext
+++ b/wiki/fox.wikitext
@@ -15,7 +15,7 @@ Middle English ''fox'', Old English ''fox'', from common Germanic ''*fuhsaz'', f
 '''fox''' (''plural'' '''[[foxes]]''', ''feminine'' '''[[vixen]]''')
 
 # A small [[carnivore]] (''Vulpes vulpes''), the red (or silver) fox, related to dogs and wolves, with red or silver [[fur]] and a [[bushy]] [[tail]].
-# Any of numerous [[species]] of small [[wild]] [[canid]] similar to the red fox, this term describing members of at least five [[genera]] (see the [[w:Fox|Wikipedia article on the fox]]).
+# Any of numerous [[species]] of small [[wild]] [[canid]]s similar to the red fox, this term describing members of at least five [[genera]] (see the [[w:Fox|Wikipedia article on the fox]]).
 # Short form of [[fox terrier]].
 #A [[cunning]] person.
 #(''slang'') An attractive woman.
