/* verb ''intrans.'' */ <stip#64201>

--- a/wiki/stip.wikitext
+++ b/wiki/stip.wikitext
@@ -2,5 +2,6 @@
 ===verb ''intrans.''===
 '''to stip'''
 
-# [[to make vain, off-key attempts to sing when one obviously cannot (especially in refernce to the voice part of baritone
-# [[to fake excessive popularity in a social environment such as school
+# [[to make vain, off-key attempts to sing when one obviously cannot (especially in refernce to the voice part of baritone)]]
+# [[to fake excessive popularity in a social environment such as school]]
+# [[to act as being a severe geek, nerd, idiot, etc.]]
