--- a/wiki/stip.wikitext
+++ b/wiki/stip.wikitext
@@ -1,7 +1,3 @@
 ==Dutch==
-===verb ''intrans.''===
 '''to stip'''
-
-# [[to make vain, off-key attempts to sing when one obviously cannot (especially in refernce to the voice part of baritone)]]
-# [[to fake excessive popularity in a social environment such as school]]
-# [[to act as being a severe geek, nerd, idiot, etc.]]
+===verb ''it.''=== # [[to make vain, off-key attempts to sing when one obviously cannot (especially in refernce to the voice part of baritone)]] # [[to fake excessive popularity in a social environment or falsely act as being part of a social hierarchy such as that which exists in a high school]] # [[to act as being a geek, nerd, idiot, etc. to an extreme degree]]
