--- a/wiki/stip.wikitext
+++ b/wiki/stip.wikitext
@@ -6,4 +6,4 @@
 # [[to act as being a geek, nerd, idiot, etc. to an extreme degree]]
 
 ===verb ''t.''===
-# [[to sing a song "Stippy ''stipped'' that song." ]]
+# to sing a song "Stippy ''stipped'' that song."
