/* Derived terms */ <fox#8247>

--- a/wiki/fox.wikitext
+++ b/wiki/fox.wikitext
@@ -155,6 +155,7 @@ Middle English ''fox'', Old English ''fox'', from common Germanic ''*fuhsaz'', f
 *[[vixen]] ''(feminine form)''
 *[[red fox]]
 *[[silver fox]]
+*[[crazy like a fox]]
 
 ====See also====
 *[[Reynard]]
