--- a/wiki/stip.wikitext
+++ b/wiki/stip.wikitext
@@ -1,4 +1,4 @@
-==org. Dutch==
+==''orig.'' Dutch==
 '''to stip'''
 ===verb ''int.''===
 # [[to make vain, off-key attempts to sing when one obviously cannot (especially in refernce to the voice part of baritone)]]
