/* verb ''int.'' */ <stip#64201>

--- a/wiki/stip.wikitext
+++ b/wiki/stip.wikitext
@@ -4,6 +4,8 @@
 # [[to make vain, off-key attempts to sing when one obviously cannot (especially in refernce to the voice part of baritone)]]
 # [[to fake excessive popularity in a social environment or falsely act as being part of a social hierarchy such as that which exists in a high school]]
 # [[to act as being a geek, nerd, idiot, etc. to an extreme degree]]
+===verb ''t.''===
+# [[to sing a song very badly: "Stippy ''stipped'' that song."]]
 
 ===verb ''t.''===
 # [[to sing a song very badly: "Stippy ''stipped'' that song."]]
