--- a/wiki/stip.wikitext
+++ b/wiki/stip.wikitext
@@ -1,8 +1,7 @@
 ==''orig.'' Dutch==
 '''to stip'''
 ===verb===
-''int.'' [[1. to make vain, off-key attempts to sing when one obviously cannot (especially in refernce to the voice part of baritone) 2. to fake excessive popularity in a social environment or falsely act as being part of a social hierarchy such as that which exists in a high school 3. to act as being a geek, nerd, idiot, etc. to an extreme degree]]
-''tr.'' [[1. to sing a song very badly (esp. creating the sound of a raped cat in the process): "Stippy stipped that song."]]
+[[''int.'' 1. to make vain, off-key attempts to sing when one obviously cannot (especially in refernce to the voice part of baritone) 2. to fake excessive popularity in a social environment or falsely act as being part of a social hierarchy such as that which exists in a high school 3. to act as being a geek, nerd, idiot, etc. to an extreme degree ''tr.'' 1. to sing a song very badly (esp. creating the sound of a raped cat in the process): "Stippy stipped that song."]]
 
 ===verb ''t.''===
 # [[to sing a song very badly: "Stippy ''stipped'' that song."]]
