/* Declension */ table fmt <quantum#64384>

--- a/wiki/quantum.wikitext
+++ b/wiki/quantum.wikitext
@@ -15,7 +15,8 @@
 First and second declensions.
 
 {| cellpadding="5" border="1"
-!style="background:#47DCF8;"| ''Case \ Gender & N<sup>o</sup>''
+!style="background:#47DCF8;"|  ''Case <br> <math> \downarrow </math> ''
+!style="background:#47DCF8;"| ''Gender & N<sup>o</sup>'' <math> \rightarrow </math> 
 !style="background:#F1BC4E;"| ''M.''
 !style="background:#F1BC4E;"| ''F.''
 !style="background:#F1BC4E;"| ''N.''
@@ -23,23 +24,23 @@ First and second declensions.
 !style="background:#F1BC4E;"| ''FF.''
 !style="background:#F1BC4E;"| ''NN.''
 |-
-!style="background:#F1BC4E;"| ''Nominative''
+!colspan=2 style="background:#F1BC4E;"| ''Nominative''
 | <big> quantus </big> || <big> quanta </big>|| <big> quantum</big>
 | <big>quant&#299;</big> || <big>quantae</big> || <big>quanta</big>
 |-
-!style="background:#F1BC4E;"| ''Genitive''
+!colspan=2 style="background:#F1BC4E;"| ''Genitive''
 | <big>quant&#299;</big> || <big>quantae</big> || <big>quant&#299;</big>
 | <big>quant&#333;rum || <big>quant&#257;rum ||<big>quant&#333;rum</big>
 |-
-!style="background:#F1BC4E;"| ''Dative''
+!colspan=2 style="background:#F1BC4E;"| ''Dative''
 | <big>quant&#333; || <big>quantae || <big>quant&#333;
 | <big>quant&#299;s || <big>quant&#299;s || <big>quant&#299;s
 |-
-!style="background:#F1BC4E;"| ''Accusative''
+!colspan=2 style="background:#F1BC4E;"| ''Accusative''
 | <big>quantum || <big>quantam || <big>quantum
 | <big>quant&#333;s || <big>quant&#257;s || <big>quanta
 |-
-!style="background:#F1BC4E;"| ''Ablative''
+!colspan=2 style="background:#F1BC4E;"| ''Ablative''
 | <big>quant&#333; || <big>quant&#257; || <big>quant&#333;
 | <big>quant&#299;s || <big>quant&#299;s || <big>quant&#299;s
 |}
