fmt; link to ridiculus <ridiculous#64180>

--- a/wiki/ridiculous.wikitext
+++ b/wiki/ridiculous.wikitext
@@ -1,1 +1,8 @@
-Deserving of [[Ridicule]]. [[Foolish]].
+==English==
+===Adjective===
+'''ridiculous'''
+# Deserving of [[ridicule]]; [[foolish]].
+# Absurd.
+
+====Etymology====
+From Latin [[ridiculus]].
