--- a/wiki/portmanteau.wikitext
+++ b/wiki/portmanteau.wikitext
@@ -8,16 +8,16 @@ From French ''porter'', to [[carry]]; and ''manteau'', [[coat]].  (''Note that t
 
 ===Noun===
 '''portmanteau''' (''plural'' [[portmanteaus]] ''or'' [[portmanteaux]])
-
 #A large travelling case usually made of [[leather]], and opening into two equal sections.
+#:'''Quotations'''
+#:* '''ca. 1500''' Then Little John took the bishop's cloak, And spread it upon the ground, And out of the bishop's '''portmantua''', He told three hundred pound. - Anonymous: ''Robin Hood and the Bishop of Hereford'' in ''The English and Scottish Popular Ballads'' (1898)
+#:* '''1667''' Rodolphus therefore finding such an earnest Invitation, embrac'd it with thanks, and with his Servant and Portmanteau, went to Don Juan's; where they first found good Stabling for their Horses, and afterwards as good Provision for themselves. - Charles Croke, ''Fortune's Uncertainty''
 #(''linguistics'') A [[portmanteau word]]. 
+#:'''Quotations'''
+#:* '''1872''' Well, "slithy" means "lithe and slimy." "Lithe" is the same as "active." You see it's like a portmanteau--there are two meanings packed up into one word. - Lewis Carroll. ''Alice Through the Looking Glass'' - This was the first usage in this way.
 
 ====Variant forms====
 *[[portmantua]]
-
-====Quotations====
-* '''1667''': Rodolphus therefore finding such an earnest Invitation, embrac'd it with thanks, and with his Servant and Portmanteau, went to Don Juan's; where they first found good Stabling for their Horses, and afterwards as good Provision for themselves. &mdash; Charles Croke, ''Fortune's Uncertainty''
-* '''1872''': Well, "slithy" means "lithe and slimy." "Lithe" is the same as "active." You see it's like a portmanteau &mdash; there are two meanings packed up into one word. &mdash; Lewis Carroll, ''Alice Through the Looking Glass''; the first usage of the word in this sense.
 
 ====Synonyms====
 *(2): [[blend]], [[frankenword]], [[portmanteau word]]
