/* Adjective */ Restoring accidentally deleted quote <portmanteau#29>

--- a/wiki/portmanteau.wikitext
+++ b/wiki/portmanteau.wikitext
@@ -51,9 +51,9 @@ From French ''porter'', to [[carry]]; and ''manteau'', [[coat]].  (''Note that t
 ===Adjective===
 '''portmanteau''' (''not [[comparable]]''; ''used only before a noun'')
 #(''the noun used as a [[modifier]]'') Of a word, story, ''etc'', combining two words, stories, ''etc'', in the manner of a portmanteau (in the linguistic sense).
-
-====Quotations====
-* '''2002''': The overall narrator of this '''portmanteau''' story - for Dickens co-wrote it with five collaborators on his weekly periodical, ''All the Year Round'' - expresses deep, rational scepticism about the whole business of haunting. - Nicholas Lezard, ''Spooky tales by the master and friends'' in ''The Guardian'' (London) (December 14, 2002) Page 30.
+#:'''Quotations'''
+#:* '''2002''': The overall narrator of this '''portmanteau''' story - for Dickens co-wrote it with five collaborators on his weekly periodical, ''All the Year Round'' - expresses deep, rational scepticism about the whole business of haunting. - Nicholas Lezard, ''Spooky tales by the master and friends'' in ''The Guardian'' (London) (December 14, 2002) Page 30.
+#:*'''2002''' We're so bombarded with images, it's a struggle to preserve our imaginations.' In response, he's turned to cinema, commissioning 11 film-makers to contribute to a '''portmanteau''' film, entitled '11'09"01' and composed of short films each running 11 minutes, nine seconds and one frame. - Nick Bradshaw, ''One day in September'' in ''Time Out'' (December 11, 2002) Page 71.
 
 ===Related terms===
 *[[portmanteau film]]
