/* Noun */ all lower case <quantum#64384>

--- a/wiki/quantum.wikitext
+++ b/wiki/quantum.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Noun===
-'''Quantum''', plural: '''quanta'''.
+'''quantum''', plural: '''quanta'''.
 # ''(Physics)'' Smallest possible &mdash; and therefore indivisible &mdash; unit of a given quantity or quantifiable phenomenon.
 :: '''Examples:'''
 ::* ''Planck's constant is the quantum of angular momentum.''
