--- a/wiki/portmanteau_film.wikitext
+++ b/wiki/portmanteau_film.wikitext
@@ -3,9 +3,8 @@
 '''portmanteau film''' (''plural'' '''portmanteau films''')
 
 #A [[film]] that combines two or more stories in the manner of a portmanteau (in the linguistic sense).
-
-====Quotations====
-*'''2002''' We're so bombarded with images, it's a struggle to preserve our imaginations.' In response, he's turned to cinema, commissioning 11 film-makers to contribute to a '''portmanteau film''', entitled '11'09"01' and composed of short films each running 11 minutes, nine seconds and one frame. - Nick Bradshaw, ''One day in September'' in ''Time Out'' (December 11, 2002) Page 71.
+#:'''Quotations'''
+#:*'''2002''' We're so bombarded with images, it's a struggle to preserve our imaginations.' In response, he's turned to cinema, commissioning 11 film-makers to contribute to a '''portmanteau film''', entitled '11'09"01' and composed of short films each running 11 minutes, nine seconds and one frame. - Nick Bradshaw, ''One day in September'' in ''Time Out'' (December 11, 2002) Page 71.
 
 ===See also===
 *[[w:Portmanteau_film|Wikipedia article on portmanteau films]]
