--- a/wiki/alive.wikitext
+++ b/wiki/alive.wikitext
@@ -18,3 +18,7 @@ IPA: [[WEAE]] /ʌˈlaɪv/
 #:    Note: Used colloquially as an intensive; as, man alive!
 #:    Note: Alive always follows the noun which it qualifies.
 <!-- material copied from Webster's Revised Unabridged Dictionary (1913) -->
+
+====Translations====
+*Latin: [[vivum|vivus]] ''m'', [[vivum|viva]] ''f'', [[vivum]] n
+*Spanish: [[vivo]] ''m'', [[vivo|viva]] ''f''
