--- a/wiki/leap.wikitext
+++ b/wiki/leap.wikitext
@@ -19,12 +19,11 @@
 [[Past tense]] and [[past participle]]: '''Leapt''' or '''leaped''' with no clear rule to favour either form.  The ''-t'' form is much more common in the [[United Kingdom|UK]], than in the [[United States|US]].
 
 # [[jump]] from one location to another.
-
-====Quotations====
-* '''c. 1450''': It is grete nede a man to go bak to recouer the better his '''leep''' - anonymous, ''Merlin''.
-* '''1600''': I, I defie thee: wert not thou next him when he leapt into the Riuer? - anonymous, ''The wisdome of Doctor Dodypoll'', Act 4.
-* '''1783''': Th' infernal monarch rear'd his horrid head, '''Leapt''' from his throne, lest Neptune's arm should lay His dark dominions open to the day. - Hugh Blair, from the ''Illiad'' in ''Lectures on Rhetoric and Belles Lettres'' Lecture 4, page 65.
-* '''1999''': It is better to leap into the void.  - Ai, ''Vice: New & Selected Poems'', page 78. 
+#:'''Quotations'''
+#:* '''c. 1450''': It is grete nede a man to go bak to recouer the better his '''leep''' - anonymous, ''Merlin''.
+#:* '''1600''': I, I defie thee: wert not thou next him when he leapt into the Riuer? - anonymous, ''The wisdome of Doctor Dodypoll'', Act 4.
+#:* '''1783''': Th' infernal monarch rear'd his horrid head, '''Leapt''' from his throne, lest Neptune's arm should lay His dark dominions open to the day. - Hugh Blair, from the ''Illiad'' in ''Lectures on Rhetoric and Belles Lettres'' Lecture 4, page 65.
+#:* '''1999''': It is better to leap into the void.  - Ai, ''Vice: New & Selected Poems'', page 78. 
 
 ====Synonyms====
 * [[jump]]
@@ -73,9 +72,9 @@
 
 #The act of leaping or jumping
 #The distance traversed by a leap or jump
-
-====Quotations====
-* '''1969''': ''"That's one small step for man, one giant '''leap''' for mankind."'' - Neil Armstrong, as he became the first man to step on the moon; July 20, 1969.
+#A significant move forward
+#:'''Quotations'''
+#:* '''1969''': ''"That's one small step for man, one giant '''leap''' for mankind."'' - Neil Armstrong, as he became the first man to step on the moon; July 20, 1969.
 
 ====Translations====
 {| border=0 width=100%
