--- a/wiki/vivum.wikitext
+++ b/wiki/vivum.wikitext
@@ -2,3 +2,37 @@
 ===Adjective===
 ('''v&#299;vus''', '''v&#299;va''', '''v&#299;vum''')
 # [[Alive]].
+
+====Declension====
+First and second declensions.
+
+{| cellpadding="5" border="1"
+!style="background:#47DCF8;"|  ''Case <br> <math> \downarrow </math> ''
+!style="background:#47DCF8;"| ''Gender & N<sup>o</sup>'' <math> \rightarrow </math> 
+!style="background:#F1BC4E;"| ''M.''
+!style="background:#F1BC4E;"| ''F.''
+!style="background:#F1BC4E;"| ''N.''
+!style="background:#F1BC4E;"| ''MM.''
+!style="background:#F1BC4E;"| ''FF.''
+!style="background:#F1BC4E;"| ''NN.''
+|-
+!colspan=2 style="background:#F1BC4E;"| ''Nominative''
+| <big> v&#299;vus </big> || <big> v&#299;va </big>|| <big> v&#299;vum</big>
+| <big>v&#299;v&#299;</big> || <big>v&#299;vae</big> || <big>v&#299;va</big>
+|-
+!colspan=2 style="background:#F1BC4E;"| ''Genitive''
+| <big>v&#299;v&#299;</big> || <big>v&#299;vae</big> || <big>v&#299;v&#299;</big>
+| <big>v&#299;v&#333;rum || <big>v&#299;v&#257;rum ||<big>v&#299;v&#333;rum</big>
+|-
+!colspan=2 style="background:#F1BC4E;"| ''Dative''
+| <big>v&#299;v&#333; || <big>v&#299;vae || <big>v&#299;v&#333;
+| <big>v&#299;v&#299;s || <big>v&#299;v&#299;s || <big>v&#299;v&#299;s
+|-
+!colspan=2 style="background:#F1BC4E;"| ''Accusative''
+| <big>v&#299;vum || <big>v&#299;vam || <big>v&#299;vum
+| <big>v&#299;v&#333;s || <big>v&#299;v&#257;s || <big>v&#299;va
+|-
+!colspan=2 style="background:#F1BC4E;"| ''Ablative''
+| <big>v&#299;v&#333; || <big>v&#299;v&#257; || <big>v&#299;v&#333;
+| <big>v&#299;v&#299;s || <big>v&#299;v&#299;s || <big>v&#299;v&#299;s
+|}
