/* Translations */  +Latin. <suddenly#56322>

--- a/wiki/suddenly.wikitext
+++ b/wiki/suddenly.wikitext
@@ -30,9 +30,10 @@
 <!--right column here-->
 *Japanese: [[突然]]
 *Korean: [[급격하게]]
+*Latin: [[repente]]
 *Portuguese: [[de repente]]
 *Russian: [[неожиданно]] (neozhidanno)
-*Spanish: [[repentinamente]]
+*Spanish: [[repentinamente]], [[de repente]]
 |}
 |}
 
