/* Noun */ Not confused with adjectives, it is a kind of adjective <determiner#44441>

--- a/wiki/determiner.wikitext
+++ b/wiki/determiner.wikitext
@@ -1,8 +1,7 @@
 ===Noun===
 '''determiner''' ([[determiners]])
 
-# (''Grammar'') a class of words which begins a noun phrase and includes the articles, demonstratives, and words such as ''some'' and ''all''
-#* Often confused with adjectives
+# (''Grammar'') a type of adjective which begins a noun phrase and includes the articles, demonstratives, and words such as ''some'' and ''all''
 
 ===See also===
 *[[a]]
