/* Adjective */ Pronunciation. <vivum#64399>

--- a/wiki/vivum.wikitext
+++ b/wiki/vivum.wikitext
@@ -3,6 +3,9 @@
 ('''v&#299;vus''', '''v&#299;va''', '''v&#299;vum''')
 # [[Alive]].
 
+====Pronunciation====
+*[[AHD]]: ''<big> w&#275;&prime; &#275; <math> \cdot </math> w <font style="vertical-align:+8%"><math> \overline{o o} </math></font> m </big>''
+
 ====Declension====
 First and second declensions.
 
