--- a/wiki/priapism.wikitext
+++ b/wiki/priapism.wikitext
@@ -1,1 +1,1 @@
- 1. ''Path.'' Persistent erection of the penis. [[PRIAPUS]] 3; also, an obscene mental image. 3. Licentiousness; intentional indecency. 4.'' fig.'' Prostitution to what is low or base.
+ 1. ''Path.'' Persistent erection of the penis. [[Priapus]] 3; also, an obscene mental image. 3. Licentiousness; intentional indecency. 4.'' fig.'' Prostitution to what is low or base.
