--- a/wiki/encomium.wikitext
+++ b/wiki/encomium.wikitext
@@ -21,3 +21,5 @@ All songs produced by Jolene Cherry, Bill Curbishley, and Kevin Williamson.
 ==Additional notes==
 
 Catalogue: Atlantic 82731-2
+
+[[Category:Tribute albums]] [[Category:1995 albums]]
