--- a/wiki/feldspar.wikitext
+++ b/wiki/feldspar.wikitext
@@ -7,8 +7,7 @@
 :Feld, field (from Middle High German veld, from Old High German feld) + Spath, spar
 
 ===noun===
-#A large group of rock-forming [[mineral]]s that, together, make up about 60% of the earth's outer [[crust]]. The feldspars are all [[aluminum]] [[silicate]]s of the [[alkalai]] metals ''[[sodium]], [[potassium]], [[calcium]] and [[barium]]''. Feldspars are the principal constituents of [[igneous]] and [[plutonic]] rocks.
-
+#A large group of rock-forming [[mineral]]s that, together, make up about 60% of the earth's outer [[crust]]. The feldspars are all [[aluminum]] [[silicate]]s of the alkali metals ''[[sodium]], [[potassium]], [[calcium]] and [[barium]]''. Feldspars are the principal constituents of [[igneous]] and [[plutonic]] rocks.
 
 === Varieties ===
 ==== Potassium feldspars ====
